--- a/设计还原自测流程.md
+++ b/设计还原自测流程.md
@@ -1,1 +1,25 @@
-AlloyDesigner http://alloyteam.github.io/AlloyDesigner/
+
+##设计图的接收流程
+
+###通用
+1. 确认标注图是否标注准确、符合规范，如果问题多到影响页面开发，则让设计师把问题修改完毕再开工
+2. 与设计师沟通确认交互（如hover、点击等）和动画效果、内容溢出的处理方式等
+
+###PC端
+1. 确认浏览器兼容范围，低级浏览器下的某些效果是否可以有替代方案（如不支持圆角是否可以用直角代替）
+2. 确认分辨率兼容范围
+3. 确认页面中是否有自适应或响应式的布局、模块，当内容超出屏幕范围的处理方式等
+
+###移动端
+1. 确认需要兼容的系统及浏览器版本，iOS默认最新版Safari，Android默认4.1以上内置浏览器及QQ浏览器
+2. 确认需要兼容的设备型号及屏幕大小，开发过程中尽量使用与需求相符的真实设备调试页面效果，如果实在拿不到相应的设备，则需要提前声明不能保证页面效果完美
+3. 确认页面是否考虑横屏效果
+
+##自测流程
+1. 图片是否进行了必要的css sprite处理
+2. 图片和文件资源是否经过压缩优化
+3. 及时清理废弃文件，避免开发将垃圾文件上传到服务器浪费服务器资源
+4. 文件名符合文件命名规范
+5. 代码符合代码规范
+6. 检查浏览器兼容性
+7. 检查设计还原度，必须用[AlloyDesigner](http://alloyteam.github.io/AlloyDesigner/)与设计图对比做最终确认再提交
